--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -34,6 +34,11 @@ jobs:
         working-directory: ./frontend
         run: npm install
       
+      - name: Run security audit
+        working-directory: ./frontend
+        run: npm audit --audit-level=high
+        continue-on-error: true  # Don't fail build on audit warnings, but log them
+      
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
