--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dompurify": "^3.3.1",
     "embla-carousel-react": "8.5.1",
     "firebase": "12.8.0",
     "input-otp": "1.4.1",
